--- a/Volley/Volley.csproj
+++ b/Volley/Volley.csproj
@@ -306,6 +306,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Ball.cs" />
     <Compile Include="Assets\Scripts\mouseDrag.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
   </ItemGroup>
