--- a/Volley/Assembly-CSharp.csproj
+++ b/Volley/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Menu\Scripts\FallingBalls.cs" />
     <Compile Include="Assets\Menu\Scripts\Menu.cs" />
     <Compile Include="Assets\VolleyGame\Scripts\Ball.cs" />
+    <Compile Include="Assets\VolleyGame\Scripts\MenuGame.cs" />
     <Compile Include="Assets\VolleyGame\Scripts\mouseDrag.cs" />
     <Compile Include="Assets\VolleyGame\Scripts\Player.cs" />
     <Reference Include="UnityEditor.StandardEvents">
